--- a/VacationManager/Views/Teams/Index.cshtml
+++ b/VacationManager/Views/Teams/Index.cshtml
@@ -1,15 +1,19 @@
 ﻿@model Web.Models.Teams.TeamsIndexViewModel
-
+@using Microsoft.AspNetCore.Identity;
+@using Data.Entitiy;
+@inject SignInManager<User> _signInManager;
 @{
     ViewData["Title"] = "Teams";
 }
 
 <h1>@ViewData["Title"]</h1>
 
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (_signInManager.IsSignedIn(User) && User.IsInRole("CEO"))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 <table class="table">
     <thead>
         <tr>
@@ -28,29 +32,32 @@
     <tbody>
         @foreach (var item in Model.Items)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TeamName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.WorkingOnProject.ProjectName)
-                </td>   
-                <td>
-                    @String.Join(", ", item.Developers.Select(u => u.FirstName + " " + u.LastName).ToArray())
-                </td>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.TeamName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.WorkingOnProject.ProjectName)
+            </td>
+            <td>
+                @String.Join(", ", item.Developers.Select(u => u.FirstName + " " + u.LastName).ToArray())
+            </td>
+            @if (_signInManager.IsSignedIn(User) && User.IsInRole("CEO"))
+            {
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
-            </tr>
+            }
+        </tr>
         }
     </tbody>
-    <ul class="pagination">
-        @for (var i = 1; i <= Model.Pager.PagesCount; i++)
-        {
-            <li class="page-item @(i == Model.Pager.CurrentPage ? "active" : "")">
-                <a asp-route-Pager.CurrentPage="@i" class="page-link">@i</a>
-            </li>
-        }
-    </ul>
 </table>
+<ul class="pagination d-flex justify-content-center">
+    @for (var i = 1; i <= Model.Pager.PagesCount; i++)
+    {
+        <li class="page-item @(i == Model.Pager.CurrentPage ? "active" : "")">
+            <a asp-route-Pager.CurrentPage="@i" class="page-link">@i</a>
+        </li>
+    }
+</ul>
