--- a/VacationManager/Views/Users/Index.cshtml
+++ b/VacationManager/Views/Users/Index.cshtml
@@ -1,14 +1,19 @@
 ﻿@model Web.Models.Users.UsersIndexViewModel
-
+@using Microsoft.AspNetCore.Identity;
+@using Data.Entitiy;
+@inject SignInManager<User> _signInManager;
 @{
     ViewData["Title"] = "Users";
 }
 
 <h1>@ViewData["Title"]</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (_signInManager.IsSignedIn(User) && User.IsInRole("CEO"))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 <table class="table">
     <thead>
         <tr>
@@ -44,19 +49,22 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Team.TeamName)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            @if (_signInManager.IsSignedIn(User) && User.IsInRole("CEO"))
+            {
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            }
         </tr>
         }
     </tbody>
-    <ul class="pagination">
-        @for (var i = 1; i <= Model.Pager.PagesCount; i++)
-        {
-            <li class="page-item @(i == Model.Pager.CurrentPage ? "active" : "")">
-                <a asp-route-Pager.CurrentPage="@i" class="page-link">@i</a>
-            </li>
-        }
-    </ul>
 </table>
+<ul class="pagination d-flex justify-content-center">
+    @for (var i = 1; i <= Model.Pager.PagesCount; i++)
+    {
+        <li class="page-item @(i == Model.Pager.CurrentPage ? "active" : "")">
+            <a asp-route-Pager.CurrentPage="@i" class="page-link">@i</a>
+        </li>
+    }
+</ul>
