--- a/VacationManager/Views/Projects/Index.cshtml
+++ b/VacationManager/Views/Projects/Index.cshtml
@@ -9,7 +9,13 @@
 
 <h1>@ViewData["Title"]</h1>
 
-@if (_signInManager.IsSignedIn(User) && User.IsInRole("CEO"))
+
+@{
+    var user = _signInManager.UserManager.FindByNameAsync(User.Identity.Name).Result;
+}
+
+
+@if (_signInManager.IsSignedIn(User) && user.Role == "CEO")
 {
     <p>
         <a asp-action="Create">Create New</a>
@@ -43,7 +49,7 @@
                 <td>
                     @String.Join(", ", item.WorkingTeams.Select(u => u.TeamName).ToArray())
                 </td>
-                @if (_signInManager.IsSignedIn(User) && User.IsInRole("CEO"))
+                @if (_signInManager.IsSignedIn(User) && user.Role == "CEO")
                 {
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
