--- a/VacationManager/Views/Projects/Index.cshtml
+++ b/VacationManager/Views/Projects/Index.cshtml
@@ -11,11 +11,19 @@
 
 
 @{
-    var user = _signInManager.UserManager.FindByNameAsync(User.Identity.Name).Result;
+    User user;
+    try
+    {
+        user = _signInManager.UserManager.FindByNameAsync(User.Identity.Name).Result;
+    }
+    catch
+    {
+        user = null;
+    }
 }
 
 
-@if (_signInManager.IsSignedIn(User) && user.Role == "CEO")
+@if (_signInManager.IsSignedIn(User) && user != null && user.Role == "CEO")
 {
     <p>
         <a asp-action="Create">Create New</a>
@@ -49,7 +57,7 @@
                 <td>
                     @String.Join(", ", item.WorkingTeams.Select(u => u.TeamName).ToArray())
                 </td>
-                @if (_signInManager.IsSignedIn(User) && user.Role == "CEO")
+                @if (_signInManager.IsSignedIn(User) && user != null && user.Role == "CEO")
                 {
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
