--- a/VacationManager/Views/Users/Index.cshtml
+++ b/VacationManager/Views/Users/Index.cshtml
@@ -1,29 +1,33 @@
 ﻿@model Web.Models.Users.UsersIndexViewModel
-@using Microsoft.AspNetCore.Identity;
-@using Data.Entitiy;
-@inject SignInManager<User> _signInManager;
+
 @{
     ViewData["Title"] = "Users";
 }
 
 <h1>@ViewData["Title"]</h1>
 
+@using Microsoft.AspNetCore.Identity;
+@using Data.Entitiy;
+@inject SignInManager<User> _signInManager;
 @{
-    User user;
+    string[] role = { "" };
     try
     {
-        user = _signInManager.UserManager.FindByNameAsync(User.Identity.Name).Result;
+        var user = await _signInManager.UserManager.FindByNameAsync(User.Identity.Name);
+        var tempRole = await _signInManager.UserManager.GetRolesAsync(user);
+        role[0] = tempRole[0];
     }
     catch
     {
-        user = null;
+
     }
 }
 
-@if (_signInManager.IsSignedIn(User) && user != null && user.Role == "CEO")
+
+@if (_signInManager.IsSignedIn(User) && role.First() == "CEO" /*&& user != null*/)
 {
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create">Create New </a>
     </p>
 }
 <table class="table">
@@ -56,12 +60,12 @@
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Role)
+                    @Html.DisplayFor(modelItem => item.Role.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Team.TeamName)
                 </td>
-                @if (_signInManager.IsSignedIn(User) && user != null && user.Role == "CEO")
+                @if (_signInManager.IsSignedIn(User) && role.First() == "CEO" /*&& user != null*/)
                 {
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
