--- a/VacationManager/Views/Users/Index.cshtml
+++ b/VacationManager/Views/Users/Index.cshtml
@@ -7,8 +7,11 @@
 <h1>@ViewData["Title"]</h1>
 
 @using Microsoft.AspNetCore.Identity;
+@using Microsoft.EntityFrameworkCore;
 @using Data.Entitiy;
+@using Data.Context;
 @inject SignInManager<User> _signInManager;
+@inject VacantionContext _context;
 @{
     string[] role = { "" };
     try
