--- a/VacationManager/wwwroot/css/sidebar.css
+++ b/VacationManager/wwwroot/css/sidebar.css
@@ -1,5 +1,4 @@
-﻿
-#sidebar-wrapper {
+﻿#sidebar-wrapper {
     min-height: 100vh;
     margin-left: -15rem;
     -webkit-transition: margin .25s ease-out;
@@ -20,6 +19,7 @@
 #sidebar-wrapper .list-group {
     width: 15rem;
 }
+
 
 #page-content-wrapper {
     min-width: 100vw;
