--- a/VacationManager/Views/Projects/Index.cshtml
+++ b/VacationManager/Views/Projects/Index.cshtml
@@ -62,6 +62,7 @@
             {
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <span>|</span>
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             }
