--- a/VacationManager/Views/Shared/_Layout.cshtml
+++ b/VacationManager/Views/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
                         @if (user.Role.Name != "CEO")
                         {
                             <li>
-                                <a class="list-group-item list-group-item-action bg-light" asp-controller="Vacations" asp-action="">
+                                <a class="list-group-item list-group-item-action bg-light" asp-controller="Vacations" asp-action="SendRequest">
                                     <span style="font-size: 14px; margin-left: 40px;">Send request</span>
                                 </a>
                             </li>
