--- a/VacationManager/Views/Users/Index.cshtml
+++ b/VacationManager/Views/Users/Index.cshtml
@@ -70,13 +70,16 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Team.TeamName)
             </td>
-            @if (_signInManager.IsSignedIn(User) && role.First() == "CEO" /*&& user != null*/)
-            {
-                <td>
+            <td>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                @if (_signInManager.IsSignedIn(User) && (role.First() == "CEO" || item.UserName == User.Identity.Name))
+                {
+                    <span>|</span>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <span>|</span>
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            }
+                }
+            </td>
         </tr>
         }
     </tbody>
