--- a/VacationManager/Views/Teams/Index.cshtml
+++ b/VacationManager/Views/Teams/Index.cshtml
@@ -39,6 +39,9 @@
                 Working on Project
             </th>
             <th>
+                Leader
+            </th>
+            <th>
                 Developers
             </th>
             <th></th>
@@ -55,16 +58,25 @@
                 @Html.DisplayFor(modelItem => item.WorkingOnProject.ProjectName)
             </td>
             <td>
+                @{
+                    string fullName = item.Leader.FirstName + " " + item.Leader.LastName;
+                }
+                @Html.DisplayFor(modelItem => fullName)
+            </td>
+            <td>
                 @String.Join(", ", item.Developers.Select(u => u.FirstName + " " + u.LastName).ToArray())
             </td>
-            @if (_signInManager.IsSignedIn(User) && role.First() == "CEO" /*&& user != null*/)
-            {
-                <td>
+            <td>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                @if (_signInManager.IsSignedIn(User) && role.First() == "CEO" /*&& user != null*/)
+                {
+                    <span>|</span>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                     <span>|</span>
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            }
+                }
+            </td>
+
         </tr>
         }
     </tbody>
