--- a/VacationManager/Views/Users/Index.cshtml
+++ b/VacationManager/Views/Users/Index.cshtml
@@ -70,17 +70,17 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Team.TeamName)
             </td>
-            <td>
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                @if (_signInManager.IsSignedIn(User) && (role.First() == "CEO" || item.UserName == User.Identity.Name))
-                {
-                    <span>|</span>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <span>|</span>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                }
-            </td>
-        </tr>
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    @if (_signInManager.IsSignedIn(User) && role.First() == "CEO")
+                    {
+                        <span>|</span>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <span>|</span>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    }
+                </td>
+            </tr>
         }
     </tbody>
 </table>
