--- a/VacationManager/Views/Projects/Index.cshtml
+++ b/VacationManager/Views/Projects/Index.cshtml
@@ -52,7 +52,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ProjectName)
             </td>
-            <td>
+            <td style="max-width: 220px">
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
