--- a/VacationManager/Views/Teams/Index.cshtml
+++ b/VacationManager/Views/Teams/Index.cshtml
@@ -64,7 +64,7 @@
                 @Html.DisplayFor(modelItem => fullName)
             </td>
             <td>
-                @String.Join(", ", item.Developers.Select(u => u.FirstName + " " + u.LastName).ToArray())
+                @String.Join(", ", item.Developers.Where(u => u != item.Leader).Select(u => u.FirstName + " " + u.LastName).ToArray())
             </td>
             <td>
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a>
