--- a/VacationManager/Views/Vacations/SendRequest.cshtml
+++ b/VacationManager/Views/Vacations/SendRequest.cshtml
@@ -11,11 +11,13 @@
         Value = vacationTypes[n - 1],
         Text = vacationTypes[n - 1]
     }).ToList();
+
+    string selected = "";
 }
 
 <script type="text/javascript">
     window.onload = function() {
-        $("#halfDay").hide();
+        @selected = $("#select option:selected").text();
     };
 </script>
 
@@ -41,7 +43,7 @@
                 <input asp-for="ToDate" class="form-control" />
                 <span asp-validation-for="ToDate" class="text-danger"></span>
             </div>
-            <div class="form-group" id="halfDay">
+            <div class="form-group" id="halfDay" style="@(selected != "sick" ? "display:block" : "display:none")">
                 <div class="checkbox">
                     <label asp-for="HalfDayVacantion">
                         <input asp-for="HalfDayVacantion" /> Half Day Vacation
@@ -49,7 +51,9 @@
                 </div>
             </div>
             <div class="form-group" id="file">
-                <label asp-for="ImageUpload" class="control-label">Image to Upload</label>
+                <label asp-for="ImageUpload" class="control-label" style="@(selected == "sick" ? "display:block" : "display:none")">
+                    Image to Upload
+                </label>
                 <input asp-for="ImageUpload" type="file" />
                 <span style="display:block" asp-validation-for="ImageUpload" class="text-danger"></span>
             </div>
@@ -80,13 +84,6 @@
             
             $('#file').hide();
             $('#halfDay').show();
-        }
-    }
-
-    function submitDelete() {
-        var textValue = $('#select').options[$('#select').selectedIndex].text;
-        if (textValue != "sick") {
-            $('#file').remove();
         }
     }
 
